--- a/src/main/ui/TradingSimulatorGUI.form
+++ b/src/main/ui/TradingSimulatorGUI.form
@@ -46,12 +46,12 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="ca0bb" class="javax.swing.JCheckBox" binding="viewStockInChartCheckBox" default-binding="true">
+              <component id="ca0bb" class="javax.swing.JCheckBox" binding="viewSecurityInChartCheckBox">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="View stock in chart"/>
+                  <text value="View security in chart"/>
                 </properties>
               </component>
               <grid id="af40" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -115,7 +115,7 @@
                   </grid>
                 </children>
               </grid>
-              <component id="cdabc" class="javax.swing.JLabel">
+              <component id="cdabc" class="javax.swing.JLabel" binding="quoteField">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -125,19 +125,27 @@
               </component>
             </children>
           </grid>
-          <component id="10e70" class="javax.swing.JList" binding="market">
+          <scrollpane id="45eb0">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+                <maximum-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties>
-              <selectionMode value="0"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="10e70" class="javax.swing.JList" binding="market" custom-create="true">
+                <constraints/>
+                <properties>
+                  <selectionMode value="0"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
-      <grid id="a6af5" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a6af5" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -145,14 +153,42 @@
         <properties/>
         <border type="bevel-lowered" title="Account"/>
         <children>
-          <component id="331aa" class="javax.swing.JTable" binding="accountTable">
+          <component id="a311e" class="javax.swing.JLabel" binding="nameLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Account Holder: X"/>
+            </properties>
+          </component>
+          <component id="7ffac" class="javax.swing.JLabel" binding="cashLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Buying Power: $X"/>
+            </properties>
+          </component>
+          <scrollpane id="2bf47" binding="accountScrollPane" custom-create="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="200" height="-1"/>
+                <maximum-size width="200" height="-1"/>
               </grid>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="331aa" class="javax.swing.JTable" binding="accountTable" custom-create="true">
+                <constraints/>
+                <properties>
+                  <enabled value="false"/>
+                  <preferredScrollableViewportSize width="200" height="300"/>
+                  <rowSelectionAllowed value="false"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
