--- a/src/main/ui/TradingSimulatorGUI.form
+++ b/src/main/ui/TradingSimulatorGUI.form
@@ -106,7 +106,7 @@
                   </grid>
                 </children>
               </grid>
-              <component id="cdabc" class="javax.swing.JLabel" binding="quoteField">
+              <component id="cdabc" class="javax.swing.JLabel" binding="quoteLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
